# Bongobs-Cat-Plugin

./: CMakeLists.txt  EventManager.cpp  EventManager.hpp  Hook.cpp  Hook.hpp  Model.cpp  View.cpp  View.hpp  VtuberDelegate.cpp  VtuberPlugin.cpp  vtuber_plugin.cpp
